man: remove references to `mesonconf` in meson(1)
`mesonconf` is deprecated, and shouldn't be suggested to users anymore.

--- a/man/meson.1
+++ b/man/meson.1
@@ -63,8 +63,9 @@ print command line help
 
 .SH The configure command
 
-Mesonconf provides a way to configure a Meson
-project from the command line. Its usage is simple.
+.B meson configure
+provides a way to configure a Meson project from the command line.
+Its usage is simple:
 
 .B meson configure [
 .I build directory
@@ -74,8 +75,9 @@ project from the command line. Its usage is simple.
 
 If build directory is omitted, the current directory is used instead.
 
-If no parameters are set, mesonconf will print the value of all build
-options to the console.
+If no parameters are set,
+.B meson configure
+will print the value of all build options to the console.
 
 To set values, use the \-D command line argument like this.
 
