man: remove references to `mesontest` in meson(1)
`mesontest` is deprecated, and shouldn't be suggested to users anymore.

--- a/man/meson.1
+++ b/man/meson.1
@@ -115,12 +115,14 @@ print command line help
 
 .SH The test command
 
-Mesontest is a helper tool for running test suites of projects using Meson.
+.B meson test
+is a helper tool for running test suites of projects using Meson.
 The default way of running tests is to invoke the default build command:
 
 \fBninja [\fR \fItest\fR \fB]\fR
 
-Mesontest provides a richer set of tools for invoking tests.
+.B meson test
+provides a richer set of tools for invoking tests.
 
 .SS "options:"
 .TP
