--- a/man/meson.1
+++ b/man/meson.1
@@ -1,4 +1,4 @@
-.TH MESON "1" "March 2022" "meson 0.61.4" "User Commands"
+.TH MESON "1" "May 2022" "meson 0.61.5 (LTS)" "User Commands"
 .SH NAME
 meson - a high productivity build system
 .SH DESCRIPTION
